--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
         "ngInfiniteScroll": "1.2.1",
         "sockjs-client": "1.0.3",
         "stomp-websocket": "2.3.4",
-        "swagger-ui": "2.1.3"
+        "swagger-ui": "2.1.3",
+        "ngletteravatar": "4.0.1"
     },
     "devDependencies": {
         "angular-mocks": "1.4.8",
