--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ node_js:
   - "4.3.2"
 jdk:
   - oraclejdk8
-sudo: false
+sudo: true
 before_install:
+  - gradle npm_install -g npm
+  - gradle npm_update
   - gradle npm_install -g gulp
   - gradle npm_install -g generator-jhipster-swagger2markup
 install:
