--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,14 @@ before_install:
 install:
   - npm install -g npm
   - npm update
+  - npm install -g bower
   - npm install -g gulp
   - npm install
+  - bower install
 before_script:
+  - gulp install
   - gulp build
+  - gulp test
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
