--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install: npm install
 before_script: gulp build
 script:
   - gulp test
-  - ./gradlew build
-  - ./gradlew test
+  - sudo ./gradlew build
+  - sudo ./gradlew test
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
