--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ sudo: true
 before_install:
   - npm install -g npm
   - npm install -g gulp
+  - npm install bower
   - chmod +x gradlew
 install: npm install
 before_script: gulp build
