--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "4.3.2"
 jdk:
   - oraclejdk8
-sudo: true
+sudo: false
 before_install:
   - npm install -g npm
   - npm install -g gulp
@@ -15,6 +15,10 @@ script:
   - gulp test
   - ./gradlew build
   - ./gradlew test
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
