--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,25 @@
-language: node_js
-node_js:
-  - "4.3.2"
+language: java
+
 jdk:
   - oraclejdk8
 sudo: false
+env:
+  - NODE_VERSION=4.3.2
 before_install:
+  - nvm install $NODE_VERSION
+  - nvm use $NODE_VERSION
   - npm install -g npm
   - npm install -g gulp
   - npm install -g bower
   - chmod +x gradlew
 install: npm install && bower install
-before_script: gulp build
+before_script: 
+  - gulp build
 script:
   - gulp test
   - ./gradlew build
   - ./gradlew test
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
