--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,20 @@ before_install:
 install: npm install && bower install
 before_script: 
   - gulp build
+  - sudo service mysql stop || true
+  - sudo service memcached stop || true
+  - sudo service bootlogd stop || true
+  - sudo service elasticsearch stop || true
+  - sudo service mongodb stop || true
+  - sudo service neo4j stop || true
+  - sudo service cassandra stop || true
+  - sudo service riak stop || true
+  - sudo service rsync stop || true
+  - sudo service x11-common stop || true
 script:
   - gulp test
-  - ./gradlew build
-  - ./gradlew test
+  - ./gradlew build --info
+  - ./gradlew test --info
 
 notifications:
   webhooks:
