ADD: New method in controller to retrieve from principal
Added a new method to get the needs from the principal user (AppUSer)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ######################
+#Classes folder
+######################
+/classes
+
+######################
 # Project Specific
 ######################
 /build/www/**
